--- a/app/gateway/pom.xml
+++ b/app/gateway/pom.xml
@@ -29,6 +29,28 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+
+<!--        <dependency>-->
+<!--            <groupId>com.ficmart</groupId>-->
+<!--            <artifactId></artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--        </dependency>-->
+
+
+<!--        <dependency>-->
+<!--            <groupId>com.org</groupId>-->
+<!--            <artifactId></artifactId>-->
+<!--            <version>${project.version}</version>-->
+<!--        </dependency>-->
+
+
+<!--        <dependency>-->
+<!--            <groupId>com.ficmart</groupId>-->
+<!--            <artifactId>payments-domain</artifactId>-->
+<!--            <version>${project.version}</version>-->
+<!--        </dependency>-->
+
+
         <!-- Optional: validation for request DTOs -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -43,6 +65,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>4.0.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
@@ -53,6 +81,11 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+
 
     </dependencies>
 
