--- a/modules/persistence/src/main/resources/application.properties
+++ b/modules/persistence/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=persistence
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 spring.threads.virtual.enabled=true
-spring.flyway.table=db_migrations
+spring.flyway.table=db_migration
 spring.flyway.clean-disabled=false
 spring.flyway.enabled=true
+spring.jpa.show-sql=true
+
+
